fix image-area and add test-area

--- a/index.html
+++ b/index.html
@@ -12,17 +12,33 @@
             <div class="banner">
                 <img class="banner-odin" src="odin-lined.png"> Odin
             </div>
-            <p class="credit">Photo by Halie West on <a href="https://unsplash.com/photos/green-leaf-plant-in-close-up-photography-25xggax4bSA">Unsplash</a></p>
+            <p class="credit"> Photo by Halie West on&nbsp<a href="https://unsplash.com/photos/green-leaf-plant-in-close-up-photography-25xggax4bSA">Unsplash</a></p>
         </div>
         <div class="text-area">
-            <div class="description">
-                This is not a real online service! You know you need something like this in your life to help realize your deepest dreams. 
-                Sign up <em>now</em> to get started. You know what you need to do.
-            </div>
+            <p>This is not a real online site! You know you need something like this in your life to help you realize your deepest dreams!
+                Sign up <em>now</em> to get started.
+            </p>
+            <p>You <em>know</em> what you want to do.</p>
             <div class="input-area">
                 <form>
-                    <h1>Let's do this!</h1>
+                    <p>Let's do this!</p>
+                    <label for="first-name">FIRST NAME</label>
+                    <input type="text" id="first-name">
 
+                    <label for="last-name">LAST NAME</label>
+                    <input type="text" id="last-name">
+
+                    <label for="email">EMAIL</label>
+                    <input type="email" id="email">
+
+                    <label for="phone-number">PHONE NUMBER</label>
+                    <input type="tel" id="phone-number">
+
+                    <label for="password">PASSWORD</label>
+                    <input type="password" id="password">
+
+                    <label for="confirm-password">CONFIRM PASSWORD</label>
+                    <input type="password" id="confirm-password">
                 </form>
             </div>
         </div>
