--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="content">
         <div class="image-area">
             <div class="banner">
-                <img class="banner-odin" src="odin-lined.png"> Odin
+                <img class="banner-odin" src="odin-lined.png" alt="The Allfather"> Odin
             </div>
             <p class="credit"> Photo by Halie West on&nbsp<a href="https://unsplash.com/photos/green-leaf-plant-in-close-up-photography-25xggax4bSA">Unsplash</a></p>
         </div>
@@ -19,28 +19,45 @@
                 Sign up <em>now</em> to get started.
             </p>
             <p>You <em>know</em> what you want to do.</p>
-            <div class="input-area">
-                <form>
+            <form action="" method="get">
+                <div class="input-area">
                     <p>Let's do this!</p>
-                    <label for="first-name">FIRST NAME</label>
-                    <input type="text" id="first-name">
+                    <div>
+                        <div>
+                            <label for="first-name">FIRST NAME</label>
+                            <input type="text" id="first-name">
+                        </div>
+                        <div>
+                            <label for="last-name">LAST NAME</label>
+                            <input type="text" id="last-name">
+                        </div>
+                    </div>
 
-                    <label for="last-name">LAST NAME</label>
-                    <input type="text" id="last-name">
+                    <div>
+                        <div>
+                            <label for="email">EMAIL</label>
+                            <input type="email" id="email">
+                        </div>
+                        <div>
+                            <label for="phone-number">PHONE NUMBER</label>
+                            <input type="tel" id="phone-number">
+                        </div>
+                    </div>
 
-                    <label for="email">EMAIL</label>
-                    <input type="email" id="email">
-
-                    <label for="phone-number">PHONE NUMBER</label>
-                    <input type="tel" id="phone-number">
-
-                    <label for="password">PASSWORD</label>
-                    <input type="password" id="password">
-
-                    <label for="confirm-password">CONFIRM PASSWORD</label>
-                    <input type="password" id="confirm-password">
-                </form>
-            </div>
+                    <div>
+                        <div>
+                            <label for="password">PASSWORD</label>
+                            <input type="password" id="password">
+                        </div>
+                        <div>
+                            <label for="confirm-password">CONFIRM PASSWORD</label>
+                            <input type="password" id="confirm-password">
+                        </div>
+                    </div>
+                </div>
+                    <button type="submit">Create Account</button>
+            </form>
+            <p class="login-text">Already have an account?&nbsp<a href=".">Log in</a></p>
         </div>
     </div>
 </body>
