--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign-up Form</title>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
 </head>
 <body>
     <div class="content">
@@ -25,33 +26,33 @@
                     <div>
                         <div>
                             <label for="first-name">FIRST NAME</label>
-                            <input type="text" id="first-name">
+                            <input type="text" id="first-name" required>
                         </div>
                         <div>
                             <label for="last-name">LAST NAME</label>
-                            <input type="text" id="last-name">
+                            <input type="text" id="last-name" required>
                         </div>
                     </div>
 
                     <div>
                         <div>
                             <label for="email">EMAIL</label>
-                            <input type="email" id="email">
+                            <input type="email" id="email" required>
                         </div>
                         <div>
                             <label for="phone-number">PHONE NUMBER</label>
-                            <input type="tel" id="phone-number">
+                            <input type="tel" id="phone-number" required>
                         </div>
                     </div>
 
                     <div>
-                        <div>
+                        <div class="password-check">
                             <label for="password">PASSWORD</label>
-                            <input type="password" id="password">
+                            <input type="password" id="password" required>
                         </div>
                         <div>
                             <label for="confirm-password">CONFIRM PASSWORD</label>
-                            <input type="password" id="confirm-password">
+                            <input type="password" id="confirm-password" required>
                         </div>
                     </div>
                 </div>
